fix: handle blockquote overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -62,6 +62,12 @@ blockquote {
     padding: 1em;
     font-size: 1.2rem;
 
+    // avoid overflow
+    max-width: 100%;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+
     *:last-child {
         margin-bottom: 0;
     }
